Booked classes boxes fixed, alignment fixed.

--- a/client/src/containers/GymClasses/BookedGymClasses/BookedClass/BookedClass.scss
+++ b/client/src/containers/GymClasses/BookedGymClasses/BookedClass/BookedClass.scss
@@ -1,12 +1,13 @@
 .BookedClass {
-  width: 36%;
-  margin: 20px auto;
-  box-shadow: 0 2px 3px #ccc;
-  text-align: center;
   position: relative;
+  width: 36%;
+  margin: 10rem auto;
+  text-align: center;
   box-shadow: 1px 4px 6px 1px rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 23px;
+  box-sizing: border-box;
+  padding: 0.5rem;
   background-image: linear-gradient(
     to right bottom,
     rgba(111, 172, 213, 0.8),
@@ -15,29 +16,29 @@
   color: white;
 }
 
-.Edit label {
-  display: block;
-  color: grey;
-}
+// .Edit label {
+//   display: block;
+//   color: grey;
+// }
 
-.Button {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  outline: none;
-  color: #fa923f;
-}
+// .Button {
+//   border: none;
+//   background-color: transparent;
+//   cursor: pointer;
+//   outline: none;
+//   color: #fa923f;
+// }
 
-.Button:hover,
-.Button:active {
-  color: #521751;
-}
+// .Button:hover,
+// .Button:active {
+//   color: #521751;
+// }
 
-.Button .Delete {
-  color: red;
-}
+// .Button .Delete {
+//   color: red;
+// }
 
-.Button button.Delete:hover,
-.Button button.Delete:active {
-  color: darkred;
-}
+// .Button button.Delete:hover,
+// .Button button.Delete:active {
+//   color: darkred;
+// }
